syntax = "proto3";

package controller;

enum RxModeType {
    RX_MODE_UNKNOWN = 0;
    RX_MODE_POLLING = 1;
    RX_MODE_INTERRUPT = 2;
}

message BDParms {
    bool flood = 1;
    bool unknown_unicast_flood = 2;
    bool forward = 3;
    bool learn = 4;
    bool arp_termination = 5;
    uint32 mac_age = 6;
};

message SystemParameters {
    uint32 mtu = 1; // optional, overrrides default 1500
    uint32 starting_vlan_id = 2; // optional, overrrides default 5000
    uint32 default_static_route_weight = 3; // optional, overrrides default 5
    uint32 default_static_route_preference = 4; // optional, overrrides default 0
    BDParms dynamic_bridge_parms = 5; // optional, overrides default parms
    BDParms static_bridge_parms = 6; // optional, overrides default parms
};

enum ExtEntDriverType {
    EE_DRIVER_TYPE_UNKNOWN = 0;
    EE_DRIVER_TYPE_IOSXE_SSH = 1;
}
message ExternalEntity {
    string name = 1;
    string mgmnt_ip_address = 2;
    uint32 mgmnt_port = 3;
    string basic_auth_user = 4;
    string basic_auth_passwd = 5;
    ExtEntDriverType ee_driver_type = 6;

    message HostInterface {
        string if_name = 1;
        string ipv4_addr = 2;
    }
    HostInterface host_interface = 7;

    message HostVxlan {
        string if_name = 1;
        string source_ipv4 = 2;
    }
    HostVxlan host_vxlan = 8;

    message HostBD {
        uint32 id = 1;
        string bdi_ipv4 = 2;
        repeated string interfaces = 3;
    }
    HostBD host_bd = 9;
};

message HostEntity {
    string name = 1;
    string eth_if_name = 2;
    string eth_ipv4 = 3;
    string eth_ipv6 = 4;
    string loopback_mac_addr = 5;
    string loopback_ipv4 = 6;
    string loopback_ipv6 = 7;
    string vxlan_tunnel_ipv4 = 8;
    bool create_vxlan_static_route = 9;
    uint32 mtu = 10;                   // if provided, this overrides system value
    RxModeType rx_mode = 11;
};

enum SfcType {
    SFC_UNKNOWN_TYPE = 0;

    SFC_NS_VXLAN = 1;        // VXLAN-based north-south SFC

    SFC_NS_NIC_BD = 3;       // physial NIC-based north-south SFC - bridge domain -based
    SFC_NS_NIC_L2XCONN = 4;  // physial NIC-based north-south SFC - l2xconnect -based
    SFC_NS_NIC_VRF = 9;      // physial NIC-based north-south SFC - vrf -based

    SFC_EW_BD = 2;           // bridge domain-based east-west SFC dynamcic bridge
    SFC_EW_L2XCONN = 5;      // l2xconnect -based east-west SFC
    SFC_EW_BD_L2FIB = 8;     // bridge domain-based east-west SFC static l2fib bridge
    SFC_EW_VRF_FIB = 10;     // vrf-based east-west SFC static fib

    SFC_EW_MEMIF = 6;        // each container pair is wired via memif's
    SFC_EW_VETH = 7;         // each container pair is wired via veths's
};

enum SfcElementType {
    ELEMENT_UNKNOWN = 0;
    EXTERNAL_ENTITY = 1;
    VPP_CONTAINER_MEMIF = 2;
    NON_VPP_CONTAINER_AFP = 3;
    NON_VPP_CONTAINER_MEMIF = 4;

    HOST_ENTITY = 5;
    VPP_CONTAINER_AFP = 6;
};

message CustomInfoType {
    string label = 1;
};

message L3VRFRoute {
    uint32 vrf_id = 1;                   /* optional: 0 by default */
    string description = 2;              /* optional description */
    string dst_ip_addr = 3;              /* ip address + prefix in format <address>/<prefix> */
    string next_hop_addr = 4;            /* next hop address */
    string outgoing_interface = 5;       /* outgoing interface name */
    uint32 weight = 6;                   /* weight (used for unequal cost load balncing) */
    uint32 preference = 7;               /* The preference of the path. Lowest preference is preferred.  */
                                         /* Only paths with the best preference contribute to forwarding. */
                                         /* (a poor man's primary and backup) */
};

message L3ArpEntry {
    string ip_address = 2;               /* IP address */
    string phys_address = 3;             /* MAC address matching to the IP */
};

message SfcEntity {
    string name = 1;
    string description = 2;
    SfcType type = 3;
    string sfc_ipv4_prefix = 4;     // optional field allowing east-west ifs to use a prefix eg 10.1.2.0/24, ipv6 not supported
    uint32 vnf_repeat_count = 5;    // hack for perf testing, if > 0, more vnfs are inserted into chain
    BDParms bd_parms = 6;           // optional granular control over bridge parms, use sys defaults if not provided
    message SfcElement {
        string container = 1;
        string port_label = 2;
        string etcd_vpp_switch_key = 3;   // static for now, k8s will tell us on which host this container is deployed
        string ipv4_addr = 4;             // optional, if provided, this overrides what ipAddr this i/f is given, v6 addr see below
        string mac_addr = 5;              // optional, if provided, this overrides what mac this i/f is given
        SfcElementType type = 6;
        uint32 vlan_id = 7;               // optional, if provided, this overrides what vlanID this i/f is given
        uint32 mtu = 8;                   // if provided, this overrides system value
        RxModeType rx_mode = 9;
        repeated string l2fib_macs = 10;  // for ns and ew bd l2fib sfc types
        string ipv6_addr = 11;            // optional, if provided, this i/f is assigned an ipv6 addr
        repeated L3VRFRoute l3vrf_routes = 12;       // for ew and ns l3vrf sfc types
        repeated L3ArpEntry l3arp_entries = 13;       // for ew and ns l3vrf sfc types
    };
    repeated SfcElement elements = 7;
};
